test/runnable/fail.crow
foo void() unsafe summon
	bar

bar void() unsafe summon
	fail: "FOO"

main fut nat(_ arr str) summon unsafe
	foo
	0 resolved
