test/compile-errors/spec-inst-recursion.crow
main nat64^(a string[]) summon
	a[0] foo
	()

foo[t] spec
	foo void(a t)

bar[t] spec
	bar void(a t)

foo[t] void(_ t) t bar
	()

bar[t] void(_ t) t foo
	()
